# FastapiSoc

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
simplesocial/: database.py  main.py  reaction_cache.py  schemas.py
simplesocial/routes/: account.py  posts.py  users.py
src/: crud.py  dependencies.py  models.py  security.py
src/routes/: posts.py  users.py
