[tool.poetry]
name = "simplesocial"
version = "0.1.0"
description = ""
authors = ["Gennady <83316072+1ort@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.88.0"
passlib = "1.7.4"
pydantic = "1.10.4"
python-jose = "3.3.0"
sqlalchemy = "1.4.46"
uvicorn = "0.20.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
